// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`structs/kernel serializes and prints CombinedAccumulatedData 1`] = `
"aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

read_requests: [ 0x81 0x82 0x83 0x84 0x85 0x86 0x87 0x88 0x89 0x8a 0x8b 0x8c 0x8d 0x8e 0x8f 0x90 ]
read_request_membership_witnesses: [ leaf_index: 0x45ab
sibling_path: [ 0x45ac 0x45ad 0x45ae 0x45af 0x45b0 0x45b1 0x45b2 0x45b3 0x45b4 0x45b5 0x45b6 0x45b7 0x45b8 0x45b9 0x45ba 0x45bb 0x45bc 0x45bd 0x45be 0x45bf 0x45c0 0x45c1 0x45c2 0x45c3 0x45c4 0x45c5 0x45c6 0x45c7 0x45c8 0x45c9 0x45ca 0x45cb ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4626
sibling_path: [ 0x4627 0x4628 0x4629 0x462a 0x462b 0x462c 0x462d 0x462e 0x462f 0x4630 0x4631 0x4632 0x4633 0x4634 0x4635 0x4636 0x4637 0x4638 0x4639 0x463a 0x463b 0x463c 0x463d 0x463e 0x463f 0x4640 0x4641 0x4642 0x4643 0x4644 0x4645 0x4646 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x46a1
sibling_path: [ 0x46a2 0x46a3 0x46a4 0x46a5 0x46a6 0x46a7 0x46a8 0x46a9 0x46aa 0x46ab 0x46ac 0x46ad 0x46ae 0x46af 0x46b0 0x46b1 0x46b2 0x46b3 0x46b4 0x46b5 0x46b6 0x46b7 0x46b8 0x46b9 0x46ba 0x46bb 0x46bc 0x46bd 0x46be 0x46bf 0x46c0 0x46c1 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x471c
sibling_path: [ 0x471d 0x471e 0x471f 0x4720 0x4721 0x4722 0x4723 0x4724 0x4725 0x4726 0x4727 0x4728 0x4729 0x472a 0x472b 0x472c 0x472d 0x472e 0x472f 0x4730 0x4731 0x4732 0x4733 0x4734 0x4735 0x4736 0x4737 0x4738 0x4739 0x473a 0x473b 0x473c ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4797
sibling_path: [ 0x4798 0x4799 0x479a 0x479b 0x479c 0x479d 0x479e 0x479f 0x47a0 0x47a1 0x47a2 0x47a3 0x47a4 0x47a5 0x47a6 0x47a7 0x47a8 0x47a9 0x47aa 0x47ab 0x47ac 0x47ad 0x47ae 0x47af 0x47b0 0x47b1 0x47b2 0x47b3 0x47b4 0x47b5 0x47b6 0x47b7 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4812
sibling_path: [ 0x4813 0x4814 0x4815 0x4816 0x4817 0x4818 0x4819 0x481a 0x481b 0x481c 0x481d 0x481e 0x481f 0x4820 0x4821 0x4822 0x4823 0x4824 0x4825 0x4826 0x4827 0x4828 0x4829 0x482a 0x482b 0x482c 0x482d 0x482e 0x482f 0x4830 0x4831 0x4832 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x488d
sibling_path: [ 0x488e 0x488f 0x4890 0x4891 0x4892 0x4893 0x4894 0x4895 0x4896 0x4897 0x4898 0x4899 0x489a 0x489b 0x489c 0x489d 0x489e 0x489f 0x48a0 0x48a1 0x48a2 0x48a3 0x48a4 0x48a5 0x48a6 0x48a7 0x48a8 0x48a9 0x48aa 0x48ab 0x48ac 0x48ad ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4908
sibling_path: [ 0x4909 0x490a 0x490b 0x490c 0x490d 0x490e 0x490f 0x4910 0x4911 0x4912 0x4913 0x4914 0x4915 0x4916 0x4917 0x4918 0x4919 0x491a 0x491b 0x491c 0x491d 0x491e 0x491f 0x4920 0x4921 0x4922 0x4923 0x4924 0x4925 0x4926 0x4927 0x4928 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4983
sibling_path: [ 0x4984 0x4985 0x4986 0x4987 0x4988 0x4989 0x498a 0x498b 0x498c 0x498d 0x498e 0x498f 0x4990 0x4991 0x4992 0x4993 0x4994 0x4995 0x4996 0x4997 0x4998 0x4999 0x499a 0x499b 0x499c 0x499d 0x499e 0x499f 0x49a0 0x49a1 0x49a2 0x49a3 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x49fe
sibling_path: [ 0x49ff 0x4a00 0x4a01 0x4a02 0x4a03 0x4a04 0x4a05 0x4a06 0x4a07 0x4a08 0x4a09 0x4a0a 0x4a0b 0x4a0c 0x4a0d 0x4a0e 0x4a0f 0x4a10 0x4a11 0x4a12 0x4a13 0x4a14 0x4a15 0x4a16 0x4a17 0x4a18 0x4a19 0x4a1a 0x4a1b 0x4a1c 0x4a1d 0x4a1e ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4a79
sibling_path: [ 0x4a7a 0x4a7b 0x4a7c 0x4a7d 0x4a7e 0x4a7f 0x4a80 0x4a81 0x4a82 0x4a83 0x4a84 0x4a85 0x4a86 0x4a87 0x4a88 0x4a89 0x4a8a 0x4a8b 0x4a8c 0x4a8d 0x4a8e 0x4a8f 0x4a90 0x4a91 0x4a92 0x4a93 0x4a94 0x4a95 0x4a96 0x4a97 0x4a98 0x4a99 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4af4
sibling_path: [ 0x4af5 0x4af6 0x4af7 0x4af8 0x4af9 0x4afa 0x4afb 0x4afc 0x4afd 0x4afe 0x4aff 0x4b00 0x4b01 0x4b02 0x4b03 0x4b04 0x4b05 0x4b06 0x4b07 0x4b08 0x4b09 0x4b0a 0x4b0b 0x4b0c 0x4b0d 0x4b0e 0x4b0f 0x4b10 0x4b11 0x4b12 0x4b13 0x4b14 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4b6f
sibling_path: [ 0x4b70 0x4b71 0x4b72 0x4b73 0x4b74 0x4b75 0x4b76 0x4b77 0x4b78 0x4b79 0x4b7a 0x4b7b 0x4b7c 0x4b7d 0x4b7e 0x4b7f 0x4b80 0x4b81 0x4b82 0x4b83 0x4b84 0x4b85 0x4b86 0x4b87 0x4b88 0x4b89 0x4b8a 0x4b8b 0x4b8c 0x4b8d 0x4b8e 0x4b8f ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4bea
sibling_path: [ 0x4beb 0x4bec 0x4bed 0x4bee 0x4bef 0x4bf0 0x4bf1 0x4bf2 0x4bf3 0x4bf4 0x4bf5 0x4bf6 0x4bf7 0x4bf8 0x4bf9 0x4bfa 0x4bfb 0x4bfc 0x4bfd 0x4bfe 0x4bff 0x4c00 0x4c01 0x4c02 0x4c03 0x4c04 0x4c05 0x4c06 0x4c07 0x4c08 0x4c09 0x4c0a ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4c65
sibling_path: [ 0x4c66 0x4c67 0x4c68 0x4c69 0x4c6a 0x4c6b 0x4c6c 0x4c6d 0x4c6e 0x4c6f 0x4c70 0x4c71 0x4c72 0x4c73 0x4c74 0x4c75 0x4c76 0x4c77 0x4c78 0x4c79 0x4c7a 0x4c7b 0x4c7c 0x4c7d 0x4c7e 0x4c7f 0x4c80 0x4c81 0x4c82 0x4c83 0x4c84 0x4c85 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4ce0
sibling_path: [ 0x4ce1 0x4ce2 0x4ce3 0x4ce4 0x4ce5 0x4ce6 0x4ce7 0x4ce8 0x4ce9 0x4cea 0x4ceb 0x4cec 0x4ced 0x4cee 0x4cef 0x4cf0 0x4cf1 0x4cf2 0x4cf3 0x4cf4 0x4cf5 0x4cf6 0x4cf7 0x4cf8 0x4cf9 0x4cfa 0x4cfb 0x4cfc 0x4cfd 0x4cfe 0x4cff 0x4d00 ]
is_transient: 0
hint_to_commitment: 0x0
 ]
new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: function_selector: c02
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: function_selector: c03
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: function_selector: c04
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: function_selector: c05
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests: [ leaf_index: 0xd01
old_value: 0xd02
new_value: 0xd03
 leaf_index: 0xd02
old_value: 0xd03
new_value: 0xd04
 leaf_index: 0xd03
old_value: 0xd04
new_value: 0xd05
 leaf_index: 0xd04
old_value: 0xd05
new_value: 0xd06
 leaf_index: 0xd05
old_value: 0xd06
new_value: 0xd07
 leaf_index: 0xd06
old_value: 0xd07
new_value: 0xd08
 leaf_index: 0xd07
old_value: 0xd08
new_value: 0xd09
 leaf_index: 0xd08
old_value: 0xd09
new_value: 0xd0a
 ]
public_data_reads: [ leaf_index: 0xe01
value: 0xe02
 leaf_index: 0xe02
value: 0xe03
 leaf_index: 0xe03
value: 0xe04
 leaf_index: 0xe04
value: 0xe05
 leaf_index: 0xe05
value: 0xe06
 leaf_index: 0xe06
value: 0xe07
 leaf_index: 0xe07
value: 0xe08
 leaf_index: 0xe08
value: 0xe09
 ]
"
`;

exports[`structs/kernel serializes and prints EcdsaSignature 1`] = `"{ 0101010101010101010101010101010101010101010101010101010101010101, 0101010101010101010101010101010101010101010101010101010101010101 }"`;

exports[`structs/kernel serializes and prints previous_kernel_data 1`] = `
"public_inputs:
end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

read_requests: [ 0x81 0x82 0x83 0x84 0x85 0x86 0x87 0x88 0x89 0x8a 0x8b 0x8c 0x8d 0x8e 0x8f 0x90 ]
read_request_membership_witnesses: [ leaf_index: 0x45ab
sibling_path: [ 0x45ac 0x45ad 0x45ae 0x45af 0x45b0 0x45b1 0x45b2 0x45b3 0x45b4 0x45b5 0x45b6 0x45b7 0x45b8 0x45b9 0x45ba 0x45bb 0x45bc 0x45bd 0x45be 0x45bf 0x45c0 0x45c1 0x45c2 0x45c3 0x45c4 0x45c5 0x45c6 0x45c7 0x45c8 0x45c9 0x45ca 0x45cb ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4626
sibling_path: [ 0x4627 0x4628 0x4629 0x462a 0x462b 0x462c 0x462d 0x462e 0x462f 0x4630 0x4631 0x4632 0x4633 0x4634 0x4635 0x4636 0x4637 0x4638 0x4639 0x463a 0x463b 0x463c 0x463d 0x463e 0x463f 0x4640 0x4641 0x4642 0x4643 0x4644 0x4645 0x4646 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x46a1
sibling_path: [ 0x46a2 0x46a3 0x46a4 0x46a5 0x46a6 0x46a7 0x46a8 0x46a9 0x46aa 0x46ab 0x46ac 0x46ad 0x46ae 0x46af 0x46b0 0x46b1 0x46b2 0x46b3 0x46b4 0x46b5 0x46b6 0x46b7 0x46b8 0x46b9 0x46ba 0x46bb 0x46bc 0x46bd 0x46be 0x46bf 0x46c0 0x46c1 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x471c
sibling_path: [ 0x471d 0x471e 0x471f 0x4720 0x4721 0x4722 0x4723 0x4724 0x4725 0x4726 0x4727 0x4728 0x4729 0x472a 0x472b 0x472c 0x472d 0x472e 0x472f 0x4730 0x4731 0x4732 0x4733 0x4734 0x4735 0x4736 0x4737 0x4738 0x4739 0x473a 0x473b 0x473c ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4797
sibling_path: [ 0x4798 0x4799 0x479a 0x479b 0x479c 0x479d 0x479e 0x479f 0x47a0 0x47a1 0x47a2 0x47a3 0x47a4 0x47a5 0x47a6 0x47a7 0x47a8 0x47a9 0x47aa 0x47ab 0x47ac 0x47ad 0x47ae 0x47af 0x47b0 0x47b1 0x47b2 0x47b3 0x47b4 0x47b5 0x47b6 0x47b7 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4812
sibling_path: [ 0x4813 0x4814 0x4815 0x4816 0x4817 0x4818 0x4819 0x481a 0x481b 0x481c 0x481d 0x481e 0x481f 0x4820 0x4821 0x4822 0x4823 0x4824 0x4825 0x4826 0x4827 0x4828 0x4829 0x482a 0x482b 0x482c 0x482d 0x482e 0x482f 0x4830 0x4831 0x4832 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x488d
sibling_path: [ 0x488e 0x488f 0x4890 0x4891 0x4892 0x4893 0x4894 0x4895 0x4896 0x4897 0x4898 0x4899 0x489a 0x489b 0x489c 0x489d 0x489e 0x489f 0x48a0 0x48a1 0x48a2 0x48a3 0x48a4 0x48a5 0x48a6 0x48a7 0x48a8 0x48a9 0x48aa 0x48ab 0x48ac 0x48ad ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4908
sibling_path: [ 0x4909 0x490a 0x490b 0x490c 0x490d 0x490e 0x490f 0x4910 0x4911 0x4912 0x4913 0x4914 0x4915 0x4916 0x4917 0x4918 0x4919 0x491a 0x491b 0x491c 0x491d 0x491e 0x491f 0x4920 0x4921 0x4922 0x4923 0x4924 0x4925 0x4926 0x4927 0x4928 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4983
sibling_path: [ 0x4984 0x4985 0x4986 0x4987 0x4988 0x4989 0x498a 0x498b 0x498c 0x498d 0x498e 0x498f 0x4990 0x4991 0x4992 0x4993 0x4994 0x4995 0x4996 0x4997 0x4998 0x4999 0x499a 0x499b 0x499c 0x499d 0x499e 0x499f 0x49a0 0x49a1 0x49a2 0x49a3 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x49fe
sibling_path: [ 0x49ff 0x4a00 0x4a01 0x4a02 0x4a03 0x4a04 0x4a05 0x4a06 0x4a07 0x4a08 0x4a09 0x4a0a 0x4a0b 0x4a0c 0x4a0d 0x4a0e 0x4a0f 0x4a10 0x4a11 0x4a12 0x4a13 0x4a14 0x4a15 0x4a16 0x4a17 0x4a18 0x4a19 0x4a1a 0x4a1b 0x4a1c 0x4a1d 0x4a1e ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4a79
sibling_path: [ 0x4a7a 0x4a7b 0x4a7c 0x4a7d 0x4a7e 0x4a7f 0x4a80 0x4a81 0x4a82 0x4a83 0x4a84 0x4a85 0x4a86 0x4a87 0x4a88 0x4a89 0x4a8a 0x4a8b 0x4a8c 0x4a8d 0x4a8e 0x4a8f 0x4a90 0x4a91 0x4a92 0x4a93 0x4a94 0x4a95 0x4a96 0x4a97 0x4a98 0x4a99 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4af4
sibling_path: [ 0x4af5 0x4af6 0x4af7 0x4af8 0x4af9 0x4afa 0x4afb 0x4afc 0x4afd 0x4afe 0x4aff 0x4b00 0x4b01 0x4b02 0x4b03 0x4b04 0x4b05 0x4b06 0x4b07 0x4b08 0x4b09 0x4b0a 0x4b0b 0x4b0c 0x4b0d 0x4b0e 0x4b0f 0x4b10 0x4b11 0x4b12 0x4b13 0x4b14 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4b6f
sibling_path: [ 0x4b70 0x4b71 0x4b72 0x4b73 0x4b74 0x4b75 0x4b76 0x4b77 0x4b78 0x4b79 0x4b7a 0x4b7b 0x4b7c 0x4b7d 0x4b7e 0x4b7f 0x4b80 0x4b81 0x4b82 0x4b83 0x4b84 0x4b85 0x4b86 0x4b87 0x4b88 0x4b89 0x4b8a 0x4b8b 0x4b8c 0x4b8d 0x4b8e 0x4b8f ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4bea
sibling_path: [ 0x4beb 0x4bec 0x4bed 0x4bee 0x4bef 0x4bf0 0x4bf1 0x4bf2 0x4bf3 0x4bf4 0x4bf5 0x4bf6 0x4bf7 0x4bf8 0x4bf9 0x4bfa 0x4bfb 0x4bfc 0x4bfd 0x4bfe 0x4bff 0x4c00 0x4c01 0x4c02 0x4c03 0x4c04 0x4c05 0x4c06 0x4c07 0x4c08 0x4c09 0x4c0a ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4c65
sibling_path: [ 0x4c66 0x4c67 0x4c68 0x4c69 0x4c6a 0x4c6b 0x4c6c 0x4c6d 0x4c6e 0x4c6f 0x4c70 0x4c71 0x4c72 0x4c73 0x4c74 0x4c75 0x4c76 0x4c77 0x4c78 0x4c79 0x4c7a 0x4c7b 0x4c7c 0x4c7d 0x4c7e 0x4c7f 0x4c80 0x4c81 0x4c82 0x4c83 0x4c84 0x4c85 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4ce0
sibling_path: [ 0x4ce1 0x4ce2 0x4ce3 0x4ce4 0x4ce5 0x4ce6 0x4ce7 0x4ce8 0x4ce9 0x4cea 0x4ceb 0x4cec 0x4ced 0x4cee 0x4cef 0x4cf0 0x4cf1 0x4cf2 0x4cf3 0x4cf4 0x4cf5 0x4cf6 0x4cf7 0x4cf8 0x4cf9 0x4cfa 0x4cfb 0x4cfc 0x4cfd 0x4cfe 0x4cff 0x4d00 ]
is_transient: 0
hint_to_commitment: 0x0
 ]
new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: function_selector: c02
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: function_selector: c03
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: function_selector: c04
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: function_selector: c05
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests: [ leaf_index: 0xd01
old_value: 0xd02
new_value: 0xd03
 leaf_index: 0xd02
old_value: 0xd03
new_value: 0xd04
 leaf_index: 0xd03
old_value: 0xd04
new_value: 0xd05
 leaf_index: 0xd04
old_value: 0xd05
new_value: 0xd06
 leaf_index: 0xd05
old_value: 0xd06
new_value: 0xd07
 leaf_index: 0xd06
old_value: 0xd07
new_value: 0xd08
 leaf_index: 0xd07
old_value: 0xd08
new_value: 0xd09
 leaf_index: 0xd08
old_value: 0xd09
new_value: 0xd0a
 ]
public_data_reads: [ leaf_index: 0xe01
value: 0xe02
 leaf_index: 0xe02
value: 0xe03
 leaf_index: 0xe03
value: 0xe04
 leaf_index: 0xe04
value: 0xe05
 leaf_index: 0xe05
value: 0xe06
 leaf_index: 0xe06
value: 0xe07
 leaf_index: 0xe07
value: 0xe08
 leaf_index: 0xe08
value: 0xe09
 ]

constants:
block_data:
private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
blocks_tree_root: 0x105
private_kernel_vk_tree_root: 0x106
public_data_tree_root: 0x107
global_variables_hash: 0x108

tx_context:
is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: deployer_public_key:
x: 0x105
y: 0x106

constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk: key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]
"
`;

exports[`structs/kernel serializes and prints private_kernel_inputs_init 1`] = `
"tx_request:
origin: 0x1
function_data: function_selector: 257
is_internal: 0
is_private: 1
is_constructor: 1

args_hash: 0x201
tx_context:
is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: deployer_public_key:
x: 0x401
y: 0x402

constructor_vk_hash: 0x402
function_tree_root: 0x403
contract_address_salt: 0x404
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x0
version: 0x0


private_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1012
storage_contract_address: 0x1013
portal_contract_address: 0x1014
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1111
return_values: [ 0x1211 0x1212 0x1213 0x1214 ]
read_requests: [ 0x1311 0x1312 0x1313 0x1314 ]
new_commitments: [ 0x1411 0x1412 0x1413 0x1414 ]
new_nullifiers: [ 0x1511 0x1512 0x1513 0x1514 ]
nullified_commitments: [ 0x1521 0x1522 0x1523 0x1524 ]
private_call_stack: [ 0x1611 0x1612 0x1613 0x1614 ]
public_call_stack: [ 0x1711 0x1712 0x1713 0x1714 ]
new_l2_to_l1_msgs: [ 0x1811 0x1812 ]
encrypted_logs_hash: [ 0x1911 0x1912 ]
unencrypted_logs_hash: [ 0x1a11 0x1a12 ]
encrypted_log_preimages_length: 0x1b11
unencrypted_log_preimages_length: 0x1c11
historic_private_data_tree_root: 0x1e11
historic_nullifier_tree_root: 0x1f11
historic_contract_tree_root: 0x1d11
historic_l1_to_l2_messages_tree_root: 0x2011
historic_blocks_tree_root: 0x2111
historic_public_data_tree_root: 0x2211
historic_global_variables_hash: 0x2311
contract_deployment_data: deployer_public_key:
x: 0x1
y: 0x2

constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2411
version: 0x2511

is_execution_request: 0

private_call_stack_preimages: [ contract_address: 0x1011
function_data: function_selector: 1012
is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1022
storage_contract_address: 0x1023
portal_contract_address: 0x1024
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1121
return_values: [ 0x1221 0x1222 0x1223 0x1224 ]
read_requests: [ 0x1321 0x1322 0x1323 0x1324 ]
new_commitments: [ 0x1421 0x1422 0x1423 0x1424 ]
new_nullifiers: [ 0x1521 0x1522 0x1523 0x1524 ]
nullified_commitments: [ 0x1531 0x1532 0x1533 0x1534 ]
private_call_stack: [ 0x1621 0x1622 0x1623 0x1624 ]
public_call_stack: [ 0x1721 0x1722 0x1723 0x1724 ]
new_l2_to_l1_msgs: [ 0x1821 0x1822 ]
encrypted_logs_hash: [ 0x1921 0x1922 ]
unencrypted_logs_hash: [ 0x1a21 0x1a22 ]
encrypted_log_preimages_length: 0x1b21
unencrypted_log_preimages_length: 0x1c21
historic_private_data_tree_root: 0x1e21
historic_nullifier_tree_root: 0x1f21
historic_contract_tree_root: 0x1d21
historic_l1_to_l2_messages_tree_root: 0x2021
historic_blocks_tree_root: 0x2121
historic_public_data_tree_root: 0x2221
historic_global_variables_hash: 0x2321
contract_deployment_data: deployer_public_key:
x: 0x1
y: 0x2

constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2421
version: 0x2521

is_execution_request: 0
 contract_address: 0x1012
function_data: function_selector: 1013
is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1023
storage_contract_address: 0x1024
portal_contract_address: 0x1025
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1122
return_values: [ 0x1222 0x1223 0x1224 0x1225 ]
read_requests: [ 0x1322 0x1323 0x1324 0x1325 ]
new_commitments: [ 0x1422 0x1423 0x1424 0x1425 ]
new_nullifiers: [ 0x1522 0x1523 0x1524 0x1525 ]
nullified_commitments: [ 0x1532 0x1533 0x1534 0x1535 ]
private_call_stack: [ 0x1622 0x1623 0x1624 0x1625 ]
public_call_stack: [ 0x1722 0x1723 0x1724 0x1725 ]
new_l2_to_l1_msgs: [ 0x1822 0x1823 ]
encrypted_logs_hash: [ 0x1922 0x1923 ]
unencrypted_logs_hash: [ 0x1a22 0x1a23 ]
encrypted_log_preimages_length: 0x1b22
unencrypted_log_preimages_length: 0x1c22
historic_private_data_tree_root: 0x1e22
historic_nullifier_tree_root: 0x1f22
historic_contract_tree_root: 0x1d22
historic_l1_to_l2_messages_tree_root: 0x2022
historic_blocks_tree_root: 0x2122
historic_public_data_tree_root: 0x2222
historic_global_variables_hash: 0x2322
contract_deployment_data: deployer_public_key:
x: 0x1
y: 0x2

constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2422
version: 0x2522

is_execution_request: 0
 contract_address: 0x1013
function_data: function_selector: 1014
is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1024
storage_contract_address: 0x1025
portal_contract_address: 0x1026
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1123
return_values: [ 0x1223 0x1224 0x1225 0x1226 ]
read_requests: [ 0x1323 0x1324 0x1325 0x1326 ]
new_commitments: [ 0x1423 0x1424 0x1425 0x1426 ]
new_nullifiers: [ 0x1523 0x1524 0x1525 0x1526 ]
nullified_commitments: [ 0x1533 0x1534 0x1535 0x1536 ]
private_call_stack: [ 0x1623 0x1624 0x1625 0x1626 ]
public_call_stack: [ 0x1723 0x1724 0x1725 0x1726 ]
new_l2_to_l1_msgs: [ 0x1823 0x1824 ]
encrypted_logs_hash: [ 0x1923 0x1924 ]
unencrypted_logs_hash: [ 0x1a23 0x1a24 ]
encrypted_log_preimages_length: 0x1b23
unencrypted_log_preimages_length: 0x1c23
historic_private_data_tree_root: 0x1e23
historic_nullifier_tree_root: 0x1f23
historic_contract_tree_root: 0x1d23
historic_l1_to_l2_messages_tree_root: 0x2023
historic_blocks_tree_root: 0x2123
historic_public_data_tree_root: 0x2223
historic_global_variables_hash: 0x2323
contract_deployment_data: deployer_public_key:
x: 0x1
y: 0x2

constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2423
version: 0x2523

is_execution_request: 0
 contract_address: 0x1014
function_data: function_selector: 1015
is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1025
storage_contract_address: 0x1026
portal_contract_address: 0x1027
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1124
return_values: [ 0x1224 0x1225 0x1226 0x1227 ]
read_requests: [ 0x1324 0x1325 0x1326 0x1327 ]
new_commitments: [ 0x1424 0x1425 0x1426 0x1427 ]
new_nullifiers: [ 0x1524 0x1525 0x1526 0x1527 ]
nullified_commitments: [ 0x1534 0x1535 0x1536 0x1537 ]
private_call_stack: [ 0x1624 0x1625 0x1626 0x1627 ]
public_call_stack: [ 0x1724 0x1725 0x1726 0x1727 ]
new_l2_to_l1_msgs: [ 0x1824 0x1825 ]
encrypted_logs_hash: [ 0x1924 0x1925 ]
unencrypted_logs_hash: [ 0x1a24 0x1a25 ]
encrypted_log_preimages_length: 0x1b24
unencrypted_log_preimages_length: 0x1c24
historic_private_data_tree_root: 0x1e24
historic_nullifier_tree_root: 0x1f24
historic_contract_tree_root: 0x1d24
historic_l1_to_l2_messages_tree_root: 0x2024
historic_blocks_tree_root: 0x2124
historic_public_data_tree_root: 0x2224
historic_global_variables_hash: 0x2324
contract_deployment_data: deployer_public_key:
x: 0x1
y: 0x2

constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2424
version: 0x2524

is_execution_request: 0
 ]
proof: [ 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 ]
vk: key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

function_leaf_membership_witness: leaf_index: 0x1031
sibling_path: [ 0x1031 0x1032 0x1033 0x1034 ]

contract_leaf_membership_witness: leaf_index: 0x1021
sibling_path: [ 0x1021 0x1022 0x1023 0x1024 0x1025 0x1026 0x1027 0x1028 0x1029 0x102a 0x102b 0x102c 0x102d 0x102e 0x102f 0x1030 ]

read_request_membership_witnesses: [ leaf_index: 0x1071
sibling_path: [ 0x1072 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1072
sibling_path: [ 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1073
sibling_path: [ 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1074
sibling_path: [ 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 ]
is_transient: 0
hint_to_commitment: 0x0
 ]
portal_contract_address: 0x4141414141414141414141414141414141414141
acir_hash: 0x1061

"
`;

exports[`structs/kernel serializes and prints private_kernel_inputs_inner 1`] = `
"previous_kernel:
public_inputs:
end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

read_requests: [ 0x81 0x82 0x83 0x84 0x85 0x86 0x87 0x88 0x89 0x8a 0x8b 0x8c 0x8d 0x8e 0x8f 0x90 ]
read_request_membership_witnesses: [ leaf_index: 0x45ab
sibling_path: [ 0x45ac 0x45ad 0x45ae 0x45af 0x45b0 0x45b1 0x45b2 0x45b3 0x45b4 0x45b5 0x45b6 0x45b7 0x45b8 0x45b9 0x45ba 0x45bb 0x45bc 0x45bd 0x45be 0x45bf 0x45c0 0x45c1 0x45c2 0x45c3 0x45c4 0x45c5 0x45c6 0x45c7 0x45c8 0x45c9 0x45ca 0x45cb ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4626
sibling_path: [ 0x4627 0x4628 0x4629 0x462a 0x462b 0x462c 0x462d 0x462e 0x462f 0x4630 0x4631 0x4632 0x4633 0x4634 0x4635 0x4636 0x4637 0x4638 0x4639 0x463a 0x463b 0x463c 0x463d 0x463e 0x463f 0x4640 0x4641 0x4642 0x4643 0x4644 0x4645 0x4646 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x46a1
sibling_path: [ 0x46a2 0x46a3 0x46a4 0x46a5 0x46a6 0x46a7 0x46a8 0x46a9 0x46aa 0x46ab 0x46ac 0x46ad 0x46ae 0x46af 0x46b0 0x46b1 0x46b2 0x46b3 0x46b4 0x46b5 0x46b6 0x46b7 0x46b8 0x46b9 0x46ba 0x46bb 0x46bc 0x46bd 0x46be 0x46bf 0x46c0 0x46c1 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x471c
sibling_path: [ 0x471d 0x471e 0x471f 0x4720 0x4721 0x4722 0x4723 0x4724 0x4725 0x4726 0x4727 0x4728 0x4729 0x472a 0x472b 0x472c 0x472d 0x472e 0x472f 0x4730 0x4731 0x4732 0x4733 0x4734 0x4735 0x4736 0x4737 0x4738 0x4739 0x473a 0x473b 0x473c ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4797
sibling_path: [ 0x4798 0x4799 0x479a 0x479b 0x479c 0x479d 0x479e 0x479f 0x47a0 0x47a1 0x47a2 0x47a3 0x47a4 0x47a5 0x47a6 0x47a7 0x47a8 0x47a9 0x47aa 0x47ab 0x47ac 0x47ad 0x47ae 0x47af 0x47b0 0x47b1 0x47b2 0x47b3 0x47b4 0x47b5 0x47b6 0x47b7 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4812
sibling_path: [ 0x4813 0x4814 0x4815 0x4816 0x4817 0x4818 0x4819 0x481a 0x481b 0x481c 0x481d 0x481e 0x481f 0x4820 0x4821 0x4822 0x4823 0x4824 0x4825 0x4826 0x4827 0x4828 0x4829 0x482a 0x482b 0x482c 0x482d 0x482e 0x482f 0x4830 0x4831 0x4832 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x488d
sibling_path: [ 0x488e 0x488f 0x4890 0x4891 0x4892 0x4893 0x4894 0x4895 0x4896 0x4897 0x4898 0x4899 0x489a 0x489b 0x489c 0x489d 0x489e 0x489f 0x48a0 0x48a1 0x48a2 0x48a3 0x48a4 0x48a5 0x48a6 0x48a7 0x48a8 0x48a9 0x48aa 0x48ab 0x48ac 0x48ad ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4908
sibling_path: [ 0x4909 0x490a 0x490b 0x490c 0x490d 0x490e 0x490f 0x4910 0x4911 0x4912 0x4913 0x4914 0x4915 0x4916 0x4917 0x4918 0x4919 0x491a 0x491b 0x491c 0x491d 0x491e 0x491f 0x4920 0x4921 0x4922 0x4923 0x4924 0x4925 0x4926 0x4927 0x4928 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4983
sibling_path: [ 0x4984 0x4985 0x4986 0x4987 0x4988 0x4989 0x498a 0x498b 0x498c 0x498d 0x498e 0x498f 0x4990 0x4991 0x4992 0x4993 0x4994 0x4995 0x4996 0x4997 0x4998 0x4999 0x499a 0x499b 0x499c 0x499d 0x499e 0x499f 0x49a0 0x49a1 0x49a2 0x49a3 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x49fe
sibling_path: [ 0x49ff 0x4a00 0x4a01 0x4a02 0x4a03 0x4a04 0x4a05 0x4a06 0x4a07 0x4a08 0x4a09 0x4a0a 0x4a0b 0x4a0c 0x4a0d 0x4a0e 0x4a0f 0x4a10 0x4a11 0x4a12 0x4a13 0x4a14 0x4a15 0x4a16 0x4a17 0x4a18 0x4a19 0x4a1a 0x4a1b 0x4a1c 0x4a1d 0x4a1e ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4a79
sibling_path: [ 0x4a7a 0x4a7b 0x4a7c 0x4a7d 0x4a7e 0x4a7f 0x4a80 0x4a81 0x4a82 0x4a83 0x4a84 0x4a85 0x4a86 0x4a87 0x4a88 0x4a89 0x4a8a 0x4a8b 0x4a8c 0x4a8d 0x4a8e 0x4a8f 0x4a90 0x4a91 0x4a92 0x4a93 0x4a94 0x4a95 0x4a96 0x4a97 0x4a98 0x4a99 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4af4
sibling_path: [ 0x4af5 0x4af6 0x4af7 0x4af8 0x4af9 0x4afa 0x4afb 0x4afc 0x4afd 0x4afe 0x4aff 0x4b00 0x4b01 0x4b02 0x4b03 0x4b04 0x4b05 0x4b06 0x4b07 0x4b08 0x4b09 0x4b0a 0x4b0b 0x4b0c 0x4b0d 0x4b0e 0x4b0f 0x4b10 0x4b11 0x4b12 0x4b13 0x4b14 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4b6f
sibling_path: [ 0x4b70 0x4b71 0x4b72 0x4b73 0x4b74 0x4b75 0x4b76 0x4b77 0x4b78 0x4b79 0x4b7a 0x4b7b 0x4b7c 0x4b7d 0x4b7e 0x4b7f 0x4b80 0x4b81 0x4b82 0x4b83 0x4b84 0x4b85 0x4b86 0x4b87 0x4b88 0x4b89 0x4b8a 0x4b8b 0x4b8c 0x4b8d 0x4b8e 0x4b8f ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4bea
sibling_path: [ 0x4beb 0x4bec 0x4bed 0x4bee 0x4bef 0x4bf0 0x4bf1 0x4bf2 0x4bf3 0x4bf4 0x4bf5 0x4bf6 0x4bf7 0x4bf8 0x4bf9 0x4bfa 0x4bfb 0x4bfc 0x4bfd 0x4bfe 0x4bff 0x4c00 0x4c01 0x4c02 0x4c03 0x4c04 0x4c05 0x4c06 0x4c07 0x4c08 0x4c09 0x4c0a ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4c65
sibling_path: [ 0x4c66 0x4c67 0x4c68 0x4c69 0x4c6a 0x4c6b 0x4c6c 0x4c6d 0x4c6e 0x4c6f 0x4c70 0x4c71 0x4c72 0x4c73 0x4c74 0x4c75 0x4c76 0x4c77 0x4c78 0x4c79 0x4c7a 0x4c7b 0x4c7c 0x4c7d 0x4c7e 0x4c7f 0x4c80 0x4c81 0x4c82 0x4c83 0x4c84 0x4c85 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4ce0
sibling_path: [ 0x4ce1 0x4ce2 0x4ce3 0x4ce4 0x4ce5 0x4ce6 0x4ce7 0x4ce8 0x4ce9 0x4cea 0x4ceb 0x4cec 0x4ced 0x4cee 0x4cef 0x4cf0 0x4cf1 0x4cf2 0x4cf3 0x4cf4 0x4cf5 0x4cf6 0x4cf7 0x4cf8 0x4cf9 0x4cfa 0x4cfb 0x4cfc 0x4cfd 0x4cfe 0x4cff 0x4d00 ]
is_transient: 0
hint_to_commitment: 0x0
 ]
new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: function_selector: c02
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: function_selector: c03
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: function_selector: c04
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: function_selector: c05
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests: [ leaf_index: 0xd01
old_value: 0xd02
new_value: 0xd03
 leaf_index: 0xd02
old_value: 0xd03
new_value: 0xd04
 leaf_index: 0xd03
old_value: 0xd04
new_value: 0xd05
 leaf_index: 0xd04
old_value: 0xd05
new_value: 0xd06
 leaf_index: 0xd05
old_value: 0xd06
new_value: 0xd07
 leaf_index: 0xd06
old_value: 0xd07
new_value: 0xd08
 leaf_index: 0xd07
old_value: 0xd08
new_value: 0xd09
 leaf_index: 0xd08
old_value: 0xd09
new_value: 0xd0a
 ]
public_data_reads: [ leaf_index: 0xe01
value: 0xe02
 leaf_index: 0xe02
value: 0xe03
 leaf_index: 0xe03
value: 0xe04
 leaf_index: 0xe04
value: 0xe05
 leaf_index: 0xe05
value: 0xe06
 leaf_index: 0xe06
value: 0xe07
 leaf_index: 0xe07
value: 0xe08
 leaf_index: 0xe08
value: 0xe09
 ]

constants:
block_data:
private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
blocks_tree_root: 0x105
private_kernel_vk_tree_root: 0x106
public_data_tree_root: 0x107
global_variables_hash: 0x108

tx_context:
is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: deployer_public_key:
x: 0x105
y: 0x106

constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk: key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]

private_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1012
storage_contract_address: 0x1013
portal_contract_address: 0x1014
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1111
return_values: [ 0x1211 0x1212 0x1213 0x1214 ]
read_requests: [ 0x1311 0x1312 0x1313 0x1314 ]
new_commitments: [ 0x1411 0x1412 0x1413 0x1414 ]
new_nullifiers: [ 0x1511 0x1512 0x1513 0x1514 ]
nullified_commitments: [ 0x1521 0x1522 0x1523 0x1524 ]
private_call_stack: [ 0x1611 0x1612 0x1613 0x1614 ]
public_call_stack: [ 0x1711 0x1712 0x1713 0x1714 ]
new_l2_to_l1_msgs: [ 0x1811 0x1812 ]
encrypted_logs_hash: [ 0x1911 0x1912 ]
unencrypted_logs_hash: [ 0x1a11 0x1a12 ]
encrypted_log_preimages_length: 0x1b11
unencrypted_log_preimages_length: 0x1c11
historic_private_data_tree_root: 0x1e11
historic_nullifier_tree_root: 0x1f11
historic_contract_tree_root: 0x1d11
historic_l1_to_l2_messages_tree_root: 0x2011
historic_blocks_tree_root: 0x2111
historic_public_data_tree_root: 0x2211
historic_global_variables_hash: 0x2311
contract_deployment_data: deployer_public_key:
x: 0x1
y: 0x2

constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2411
version: 0x2511

is_execution_request: 0

private_call_stack_preimages: [ contract_address: 0x1011
function_data: function_selector: 1012
is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1022
storage_contract_address: 0x1023
portal_contract_address: 0x1024
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1121
return_values: [ 0x1221 0x1222 0x1223 0x1224 ]
read_requests: [ 0x1321 0x1322 0x1323 0x1324 ]
new_commitments: [ 0x1421 0x1422 0x1423 0x1424 ]
new_nullifiers: [ 0x1521 0x1522 0x1523 0x1524 ]
nullified_commitments: [ 0x1531 0x1532 0x1533 0x1534 ]
private_call_stack: [ 0x1621 0x1622 0x1623 0x1624 ]
public_call_stack: [ 0x1721 0x1722 0x1723 0x1724 ]
new_l2_to_l1_msgs: [ 0x1821 0x1822 ]
encrypted_logs_hash: [ 0x1921 0x1922 ]
unencrypted_logs_hash: [ 0x1a21 0x1a22 ]
encrypted_log_preimages_length: 0x1b21
unencrypted_log_preimages_length: 0x1c21
historic_private_data_tree_root: 0x1e21
historic_nullifier_tree_root: 0x1f21
historic_contract_tree_root: 0x1d21
historic_l1_to_l2_messages_tree_root: 0x2021
historic_blocks_tree_root: 0x2121
historic_public_data_tree_root: 0x2221
historic_global_variables_hash: 0x2321
contract_deployment_data: deployer_public_key:
x: 0x1
y: 0x2

constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2421
version: 0x2521

is_execution_request: 0
 contract_address: 0x1012
function_data: function_selector: 1013
is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1023
storage_contract_address: 0x1024
portal_contract_address: 0x1025
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1122
return_values: [ 0x1222 0x1223 0x1224 0x1225 ]
read_requests: [ 0x1322 0x1323 0x1324 0x1325 ]
new_commitments: [ 0x1422 0x1423 0x1424 0x1425 ]
new_nullifiers: [ 0x1522 0x1523 0x1524 0x1525 ]
nullified_commitments: [ 0x1532 0x1533 0x1534 0x1535 ]
private_call_stack: [ 0x1622 0x1623 0x1624 0x1625 ]
public_call_stack: [ 0x1722 0x1723 0x1724 0x1725 ]
new_l2_to_l1_msgs: [ 0x1822 0x1823 ]
encrypted_logs_hash: [ 0x1922 0x1923 ]
unencrypted_logs_hash: [ 0x1a22 0x1a23 ]
encrypted_log_preimages_length: 0x1b22
unencrypted_log_preimages_length: 0x1c22
historic_private_data_tree_root: 0x1e22
historic_nullifier_tree_root: 0x1f22
historic_contract_tree_root: 0x1d22
historic_l1_to_l2_messages_tree_root: 0x2022
historic_blocks_tree_root: 0x2122
historic_public_data_tree_root: 0x2222
historic_global_variables_hash: 0x2322
contract_deployment_data: deployer_public_key:
x: 0x1
y: 0x2

constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2422
version: 0x2522

is_execution_request: 0
 contract_address: 0x1013
function_data: function_selector: 1014
is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1024
storage_contract_address: 0x1025
portal_contract_address: 0x1026
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1123
return_values: [ 0x1223 0x1224 0x1225 0x1226 ]
read_requests: [ 0x1323 0x1324 0x1325 0x1326 ]
new_commitments: [ 0x1423 0x1424 0x1425 0x1426 ]
new_nullifiers: [ 0x1523 0x1524 0x1525 0x1526 ]
nullified_commitments: [ 0x1533 0x1534 0x1535 0x1536 ]
private_call_stack: [ 0x1623 0x1624 0x1625 0x1626 ]
public_call_stack: [ 0x1723 0x1724 0x1725 0x1726 ]
new_l2_to_l1_msgs: [ 0x1823 0x1824 ]
encrypted_logs_hash: [ 0x1923 0x1924 ]
unencrypted_logs_hash: [ 0x1a23 0x1a24 ]
encrypted_log_preimages_length: 0x1b23
unencrypted_log_preimages_length: 0x1c23
historic_private_data_tree_root: 0x1e23
historic_nullifier_tree_root: 0x1f23
historic_contract_tree_root: 0x1d23
historic_l1_to_l2_messages_tree_root: 0x2023
historic_blocks_tree_root: 0x2123
historic_public_data_tree_root: 0x2223
historic_global_variables_hash: 0x2323
contract_deployment_data: deployer_public_key:
x: 0x1
y: 0x2

constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2423
version: 0x2523

is_execution_request: 0
 contract_address: 0x1014
function_data: function_selector: 1015
is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1025
storage_contract_address: 0x1026
portal_contract_address: 0x1027
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1124
return_values: [ 0x1224 0x1225 0x1226 0x1227 ]
read_requests: [ 0x1324 0x1325 0x1326 0x1327 ]
new_commitments: [ 0x1424 0x1425 0x1426 0x1427 ]
new_nullifiers: [ 0x1524 0x1525 0x1526 0x1527 ]
nullified_commitments: [ 0x1534 0x1535 0x1536 0x1537 ]
private_call_stack: [ 0x1624 0x1625 0x1626 0x1627 ]
public_call_stack: [ 0x1724 0x1725 0x1726 0x1727 ]
new_l2_to_l1_msgs: [ 0x1824 0x1825 ]
encrypted_logs_hash: [ 0x1924 0x1925 ]
unencrypted_logs_hash: [ 0x1a24 0x1a25 ]
encrypted_log_preimages_length: 0x1b24
unencrypted_log_preimages_length: 0x1c24
historic_private_data_tree_root: 0x1e24
historic_nullifier_tree_root: 0x1f24
historic_contract_tree_root: 0x1d24
historic_l1_to_l2_messages_tree_root: 0x2024
historic_blocks_tree_root: 0x2124
historic_public_data_tree_root: 0x2224
historic_global_variables_hash: 0x2324
contract_deployment_data: deployer_public_key:
x: 0x1
y: 0x2

constructor_vk_hash: 0x2
function_tree_root: 0x3
contract_address_salt: 0x4
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x2424
version: 0x2524

is_execution_request: 0
 ]
proof: [ 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 ]
vk: key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

function_leaf_membership_witness: leaf_index: 0x1031
sibling_path: [ 0x1031 0x1032 0x1033 0x1034 ]

contract_leaf_membership_witness: leaf_index: 0x1021
sibling_path: [ 0x1021 0x1022 0x1023 0x1024 0x1025 0x1026 0x1027 0x1028 0x1029 0x102a 0x102b 0x102c 0x102d 0x102e 0x102f 0x1030 ]

read_request_membership_witnesses: [ leaf_index: 0x1071
sibling_path: [ 0x1072 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1072
sibling_path: [ 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1073
sibling_path: [ 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1074
sibling_path: [ 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 ]
is_transient: 0
hint_to_commitment: 0x0
 ]
portal_contract_address: 0x4141414141414141414141414141414141414141
acir_hash: 0x1061

"
`;

exports[`structs/kernel serializes and prints private_kernel_public_inputs 1`] = `
"end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

read_requests: [ 0x81 0x82 0x83 0x84 0x85 0x86 0x87 0x88 0x89 0x8a 0x8b 0x8c 0x8d 0x8e 0x8f 0x90 ]
read_request_membership_witnesses: [ leaf_index: 0x45ab
sibling_path: [ 0x45ac 0x45ad 0x45ae 0x45af 0x45b0 0x45b1 0x45b2 0x45b3 0x45b4 0x45b5 0x45b6 0x45b7 0x45b8 0x45b9 0x45ba 0x45bb 0x45bc 0x45bd 0x45be 0x45bf 0x45c0 0x45c1 0x45c2 0x45c3 0x45c4 0x45c5 0x45c6 0x45c7 0x45c8 0x45c9 0x45ca 0x45cb ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4626
sibling_path: [ 0x4627 0x4628 0x4629 0x462a 0x462b 0x462c 0x462d 0x462e 0x462f 0x4630 0x4631 0x4632 0x4633 0x4634 0x4635 0x4636 0x4637 0x4638 0x4639 0x463a 0x463b 0x463c 0x463d 0x463e 0x463f 0x4640 0x4641 0x4642 0x4643 0x4644 0x4645 0x4646 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x46a1
sibling_path: [ 0x46a2 0x46a3 0x46a4 0x46a5 0x46a6 0x46a7 0x46a8 0x46a9 0x46aa 0x46ab 0x46ac 0x46ad 0x46ae 0x46af 0x46b0 0x46b1 0x46b2 0x46b3 0x46b4 0x46b5 0x46b6 0x46b7 0x46b8 0x46b9 0x46ba 0x46bb 0x46bc 0x46bd 0x46be 0x46bf 0x46c0 0x46c1 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x471c
sibling_path: [ 0x471d 0x471e 0x471f 0x4720 0x4721 0x4722 0x4723 0x4724 0x4725 0x4726 0x4727 0x4728 0x4729 0x472a 0x472b 0x472c 0x472d 0x472e 0x472f 0x4730 0x4731 0x4732 0x4733 0x4734 0x4735 0x4736 0x4737 0x4738 0x4739 0x473a 0x473b 0x473c ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4797
sibling_path: [ 0x4798 0x4799 0x479a 0x479b 0x479c 0x479d 0x479e 0x479f 0x47a0 0x47a1 0x47a2 0x47a3 0x47a4 0x47a5 0x47a6 0x47a7 0x47a8 0x47a9 0x47aa 0x47ab 0x47ac 0x47ad 0x47ae 0x47af 0x47b0 0x47b1 0x47b2 0x47b3 0x47b4 0x47b5 0x47b6 0x47b7 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4812
sibling_path: [ 0x4813 0x4814 0x4815 0x4816 0x4817 0x4818 0x4819 0x481a 0x481b 0x481c 0x481d 0x481e 0x481f 0x4820 0x4821 0x4822 0x4823 0x4824 0x4825 0x4826 0x4827 0x4828 0x4829 0x482a 0x482b 0x482c 0x482d 0x482e 0x482f 0x4830 0x4831 0x4832 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x488d
sibling_path: [ 0x488e 0x488f 0x4890 0x4891 0x4892 0x4893 0x4894 0x4895 0x4896 0x4897 0x4898 0x4899 0x489a 0x489b 0x489c 0x489d 0x489e 0x489f 0x48a0 0x48a1 0x48a2 0x48a3 0x48a4 0x48a5 0x48a6 0x48a7 0x48a8 0x48a9 0x48aa 0x48ab 0x48ac 0x48ad ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4908
sibling_path: [ 0x4909 0x490a 0x490b 0x490c 0x490d 0x490e 0x490f 0x4910 0x4911 0x4912 0x4913 0x4914 0x4915 0x4916 0x4917 0x4918 0x4919 0x491a 0x491b 0x491c 0x491d 0x491e 0x491f 0x4920 0x4921 0x4922 0x4923 0x4924 0x4925 0x4926 0x4927 0x4928 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4983
sibling_path: [ 0x4984 0x4985 0x4986 0x4987 0x4988 0x4989 0x498a 0x498b 0x498c 0x498d 0x498e 0x498f 0x4990 0x4991 0x4992 0x4993 0x4994 0x4995 0x4996 0x4997 0x4998 0x4999 0x499a 0x499b 0x499c 0x499d 0x499e 0x499f 0x49a0 0x49a1 0x49a2 0x49a3 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x49fe
sibling_path: [ 0x49ff 0x4a00 0x4a01 0x4a02 0x4a03 0x4a04 0x4a05 0x4a06 0x4a07 0x4a08 0x4a09 0x4a0a 0x4a0b 0x4a0c 0x4a0d 0x4a0e 0x4a0f 0x4a10 0x4a11 0x4a12 0x4a13 0x4a14 0x4a15 0x4a16 0x4a17 0x4a18 0x4a19 0x4a1a 0x4a1b 0x4a1c 0x4a1d 0x4a1e ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4a79
sibling_path: [ 0x4a7a 0x4a7b 0x4a7c 0x4a7d 0x4a7e 0x4a7f 0x4a80 0x4a81 0x4a82 0x4a83 0x4a84 0x4a85 0x4a86 0x4a87 0x4a88 0x4a89 0x4a8a 0x4a8b 0x4a8c 0x4a8d 0x4a8e 0x4a8f 0x4a90 0x4a91 0x4a92 0x4a93 0x4a94 0x4a95 0x4a96 0x4a97 0x4a98 0x4a99 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4af4
sibling_path: [ 0x4af5 0x4af6 0x4af7 0x4af8 0x4af9 0x4afa 0x4afb 0x4afc 0x4afd 0x4afe 0x4aff 0x4b00 0x4b01 0x4b02 0x4b03 0x4b04 0x4b05 0x4b06 0x4b07 0x4b08 0x4b09 0x4b0a 0x4b0b 0x4b0c 0x4b0d 0x4b0e 0x4b0f 0x4b10 0x4b11 0x4b12 0x4b13 0x4b14 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4b6f
sibling_path: [ 0x4b70 0x4b71 0x4b72 0x4b73 0x4b74 0x4b75 0x4b76 0x4b77 0x4b78 0x4b79 0x4b7a 0x4b7b 0x4b7c 0x4b7d 0x4b7e 0x4b7f 0x4b80 0x4b81 0x4b82 0x4b83 0x4b84 0x4b85 0x4b86 0x4b87 0x4b88 0x4b89 0x4b8a 0x4b8b 0x4b8c 0x4b8d 0x4b8e 0x4b8f ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4bea
sibling_path: [ 0x4beb 0x4bec 0x4bed 0x4bee 0x4bef 0x4bf0 0x4bf1 0x4bf2 0x4bf3 0x4bf4 0x4bf5 0x4bf6 0x4bf7 0x4bf8 0x4bf9 0x4bfa 0x4bfb 0x4bfc 0x4bfd 0x4bfe 0x4bff 0x4c00 0x4c01 0x4c02 0x4c03 0x4c04 0x4c05 0x4c06 0x4c07 0x4c08 0x4c09 0x4c0a ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4c65
sibling_path: [ 0x4c66 0x4c67 0x4c68 0x4c69 0x4c6a 0x4c6b 0x4c6c 0x4c6d 0x4c6e 0x4c6f 0x4c70 0x4c71 0x4c72 0x4c73 0x4c74 0x4c75 0x4c76 0x4c77 0x4c78 0x4c79 0x4c7a 0x4c7b 0x4c7c 0x4c7d 0x4c7e 0x4c7f 0x4c80 0x4c81 0x4c82 0x4c83 0x4c84 0x4c85 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4ce0
sibling_path: [ 0x4ce1 0x4ce2 0x4ce3 0x4ce4 0x4ce5 0x4ce6 0x4ce7 0x4ce8 0x4ce9 0x4cea 0x4ceb 0x4cec 0x4ced 0x4cee 0x4cef 0x4cf0 0x4cf1 0x4cf2 0x4cf3 0x4cf4 0x4cf5 0x4cf6 0x4cf7 0x4cf8 0x4cf9 0x4cfa 0x4cfb 0x4cfc 0x4cfd 0x4cfe 0x4cff 0x4d00 ]
is_transient: 0
hint_to_commitment: 0x0
 ]
new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: function_selector: c02
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: function_selector: c03
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: function_selector: c04
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: function_selector: c05
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests: [ leaf_index: 0xd01
old_value: 0xd02
new_value: 0xd03
 leaf_index: 0xd02
old_value: 0xd03
new_value: 0xd04
 leaf_index: 0xd03
old_value: 0xd04
new_value: 0xd05
 leaf_index: 0xd04
old_value: 0xd05
new_value: 0xd06
 leaf_index: 0xd05
old_value: 0xd06
new_value: 0xd07
 leaf_index: 0xd06
old_value: 0xd07
new_value: 0xd08
 leaf_index: 0xd07
old_value: 0xd08
new_value: 0xd09
 leaf_index: 0xd08
old_value: 0xd09
new_value: 0xd0a
 ]
public_data_reads: [ leaf_index: 0xe01
value: 0xe02
 leaf_index: 0xe02
value: 0xe03
 leaf_index: 0xe03
value: 0xe04
 leaf_index: 0xe04
value: 0xe05
 leaf_index: 0xe05
value: 0xe06
 leaf_index: 0xe06
value: 0xe07
 leaf_index: 0xe07
value: 0xe08
 leaf_index: 0xe08
value: 0xe09
 ]

constants:
block_data:
private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
blocks_tree_root: 0x105
private_kernel_vk_tree_root: 0x106
public_data_tree_root: 0x107
global_variables_hash: 0x108

tx_context:
is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: deployer_public_key:
x: 0x105
y: 0x106

constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1
"
`;

exports[`structs/kernel serializes and prints public_kernel_inputs 1`] = `
"previous_kernel:
public_inputs:
end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

read_requests: [ 0x81 0x82 0x83 0x84 0x85 0x86 0x87 0x88 0x89 0x8a 0x8b 0x8c 0x8d 0x8e 0x8f 0x90 ]
read_request_membership_witnesses: [ leaf_index: 0x45ab
sibling_path: [ 0x45ac 0x45ad 0x45ae 0x45af 0x45b0 0x45b1 0x45b2 0x45b3 0x45b4 0x45b5 0x45b6 0x45b7 0x45b8 0x45b9 0x45ba 0x45bb 0x45bc 0x45bd 0x45be 0x45bf 0x45c0 0x45c1 0x45c2 0x45c3 0x45c4 0x45c5 0x45c6 0x45c7 0x45c8 0x45c9 0x45ca 0x45cb ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4626
sibling_path: [ 0x4627 0x4628 0x4629 0x462a 0x462b 0x462c 0x462d 0x462e 0x462f 0x4630 0x4631 0x4632 0x4633 0x4634 0x4635 0x4636 0x4637 0x4638 0x4639 0x463a 0x463b 0x463c 0x463d 0x463e 0x463f 0x4640 0x4641 0x4642 0x4643 0x4644 0x4645 0x4646 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x46a1
sibling_path: [ 0x46a2 0x46a3 0x46a4 0x46a5 0x46a6 0x46a7 0x46a8 0x46a9 0x46aa 0x46ab 0x46ac 0x46ad 0x46ae 0x46af 0x46b0 0x46b1 0x46b2 0x46b3 0x46b4 0x46b5 0x46b6 0x46b7 0x46b8 0x46b9 0x46ba 0x46bb 0x46bc 0x46bd 0x46be 0x46bf 0x46c0 0x46c1 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x471c
sibling_path: [ 0x471d 0x471e 0x471f 0x4720 0x4721 0x4722 0x4723 0x4724 0x4725 0x4726 0x4727 0x4728 0x4729 0x472a 0x472b 0x472c 0x472d 0x472e 0x472f 0x4730 0x4731 0x4732 0x4733 0x4734 0x4735 0x4736 0x4737 0x4738 0x4739 0x473a 0x473b 0x473c ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4797
sibling_path: [ 0x4798 0x4799 0x479a 0x479b 0x479c 0x479d 0x479e 0x479f 0x47a0 0x47a1 0x47a2 0x47a3 0x47a4 0x47a5 0x47a6 0x47a7 0x47a8 0x47a9 0x47aa 0x47ab 0x47ac 0x47ad 0x47ae 0x47af 0x47b0 0x47b1 0x47b2 0x47b3 0x47b4 0x47b5 0x47b6 0x47b7 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4812
sibling_path: [ 0x4813 0x4814 0x4815 0x4816 0x4817 0x4818 0x4819 0x481a 0x481b 0x481c 0x481d 0x481e 0x481f 0x4820 0x4821 0x4822 0x4823 0x4824 0x4825 0x4826 0x4827 0x4828 0x4829 0x482a 0x482b 0x482c 0x482d 0x482e 0x482f 0x4830 0x4831 0x4832 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x488d
sibling_path: [ 0x488e 0x488f 0x4890 0x4891 0x4892 0x4893 0x4894 0x4895 0x4896 0x4897 0x4898 0x4899 0x489a 0x489b 0x489c 0x489d 0x489e 0x489f 0x48a0 0x48a1 0x48a2 0x48a3 0x48a4 0x48a5 0x48a6 0x48a7 0x48a8 0x48a9 0x48aa 0x48ab 0x48ac 0x48ad ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4908
sibling_path: [ 0x4909 0x490a 0x490b 0x490c 0x490d 0x490e 0x490f 0x4910 0x4911 0x4912 0x4913 0x4914 0x4915 0x4916 0x4917 0x4918 0x4919 0x491a 0x491b 0x491c 0x491d 0x491e 0x491f 0x4920 0x4921 0x4922 0x4923 0x4924 0x4925 0x4926 0x4927 0x4928 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4983
sibling_path: [ 0x4984 0x4985 0x4986 0x4987 0x4988 0x4989 0x498a 0x498b 0x498c 0x498d 0x498e 0x498f 0x4990 0x4991 0x4992 0x4993 0x4994 0x4995 0x4996 0x4997 0x4998 0x4999 0x499a 0x499b 0x499c 0x499d 0x499e 0x499f 0x49a0 0x49a1 0x49a2 0x49a3 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x49fe
sibling_path: [ 0x49ff 0x4a00 0x4a01 0x4a02 0x4a03 0x4a04 0x4a05 0x4a06 0x4a07 0x4a08 0x4a09 0x4a0a 0x4a0b 0x4a0c 0x4a0d 0x4a0e 0x4a0f 0x4a10 0x4a11 0x4a12 0x4a13 0x4a14 0x4a15 0x4a16 0x4a17 0x4a18 0x4a19 0x4a1a 0x4a1b 0x4a1c 0x4a1d 0x4a1e ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4a79
sibling_path: [ 0x4a7a 0x4a7b 0x4a7c 0x4a7d 0x4a7e 0x4a7f 0x4a80 0x4a81 0x4a82 0x4a83 0x4a84 0x4a85 0x4a86 0x4a87 0x4a88 0x4a89 0x4a8a 0x4a8b 0x4a8c 0x4a8d 0x4a8e 0x4a8f 0x4a90 0x4a91 0x4a92 0x4a93 0x4a94 0x4a95 0x4a96 0x4a97 0x4a98 0x4a99 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4af4
sibling_path: [ 0x4af5 0x4af6 0x4af7 0x4af8 0x4af9 0x4afa 0x4afb 0x4afc 0x4afd 0x4afe 0x4aff 0x4b00 0x4b01 0x4b02 0x4b03 0x4b04 0x4b05 0x4b06 0x4b07 0x4b08 0x4b09 0x4b0a 0x4b0b 0x4b0c 0x4b0d 0x4b0e 0x4b0f 0x4b10 0x4b11 0x4b12 0x4b13 0x4b14 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4b6f
sibling_path: [ 0x4b70 0x4b71 0x4b72 0x4b73 0x4b74 0x4b75 0x4b76 0x4b77 0x4b78 0x4b79 0x4b7a 0x4b7b 0x4b7c 0x4b7d 0x4b7e 0x4b7f 0x4b80 0x4b81 0x4b82 0x4b83 0x4b84 0x4b85 0x4b86 0x4b87 0x4b88 0x4b89 0x4b8a 0x4b8b 0x4b8c 0x4b8d 0x4b8e 0x4b8f ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4bea
sibling_path: [ 0x4beb 0x4bec 0x4bed 0x4bee 0x4bef 0x4bf0 0x4bf1 0x4bf2 0x4bf3 0x4bf4 0x4bf5 0x4bf6 0x4bf7 0x4bf8 0x4bf9 0x4bfa 0x4bfb 0x4bfc 0x4bfd 0x4bfe 0x4bff 0x4c00 0x4c01 0x4c02 0x4c03 0x4c04 0x4c05 0x4c06 0x4c07 0x4c08 0x4c09 0x4c0a ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4c65
sibling_path: [ 0x4c66 0x4c67 0x4c68 0x4c69 0x4c6a 0x4c6b 0x4c6c 0x4c6d 0x4c6e 0x4c6f 0x4c70 0x4c71 0x4c72 0x4c73 0x4c74 0x4c75 0x4c76 0x4c77 0x4c78 0x4c79 0x4c7a 0x4c7b 0x4c7c 0x4c7d 0x4c7e 0x4c7f 0x4c80 0x4c81 0x4c82 0x4c83 0x4c84 0x4c85 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x4ce0
sibling_path: [ 0x4ce1 0x4ce2 0x4ce3 0x4ce4 0x4ce5 0x4ce6 0x4ce7 0x4ce8 0x4ce9 0x4cea 0x4ceb 0x4cec 0x4ced 0x4cee 0x4cef 0x4cf0 0x4cf1 0x4cf2 0x4cf3 0x4cf4 0x4cf5 0x4cf6 0x4cf7 0x4cf8 0x4cf9 0x4cfa 0x4cfb 0x4cfc 0x4cfd 0x4cfe 0x4cff 0x4d00 ]
is_transient: 0
hint_to_commitment: 0x0
 ]
new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: function_selector: c02
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: function_selector: c03
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: function_selector: c04
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: function_selector: c05
is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests: [ leaf_index: 0xd01
old_value: 0xd02
new_value: 0xd03
 leaf_index: 0xd02
old_value: 0xd03
new_value: 0xd04
 leaf_index: 0xd03
old_value: 0xd04
new_value: 0xd05
 leaf_index: 0xd04
old_value: 0xd05
new_value: 0xd06
 leaf_index: 0xd05
old_value: 0xd06
new_value: 0xd07
 leaf_index: 0xd06
old_value: 0xd07
new_value: 0xd08
 leaf_index: 0xd07
old_value: 0xd08
new_value: 0xd09
 leaf_index: 0xd08
old_value: 0xd09
new_value: 0xd0a
 ]
public_data_reads: [ leaf_index: 0xe01
value: 0xe02
 leaf_index: 0xe02
value: 0xe03
 leaf_index: 0xe03
value: 0xe04
 leaf_index: 0xe04
value: 0xe05
 leaf_index: 0xe05
value: 0xe06
 leaf_index: 0xe06
value: 0xe07
 leaf_index: 0xe07
value: 0xe08
 leaf_index: 0xe08
value: 0xe09
 ]

constants:
block_data:
private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
blocks_tree_root: 0x105
private_kernel_vk_tree_root: 0x106
public_data_tree_root: 0x107
global_variables_hash: 0x108

tx_context:
is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: deployer_public_key:
x: 0x105
y: 0x106

constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk: key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]

public_call:
call_stack_item:
contract_address: 0x1001
function_data: function_selector: 4098
is_internal: 0
is_private: 0
is_constructor: 0

public_inputs: call_context:
msg_sender: 0x1011
storage_contract_address: 0x1001
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1111
return_values: [ 0x1211 0x1212 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1411
old_value: 0x1412
new_value: 0x1413
 storage_slot: 0x1412
old_value: 0x1413
new_value: 0x1414
 storage_slot: 0x1413
old_value: 0x1414
new_value: 0x1415
 storage_slot: 0x1414
old_value: 0x1415
new_value: 0x1416
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1511
current_value: 0x1512
 storage_slot: 0x1512
current_value: 0x1513
 storage_slot: 0x1513
current_value: 0x1514
 storage_slot: 0x1514
current_value: 0x1515
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x969e86085622075da29cdba0432a18b67fbcf164a5dda8785cba8f4bf5cdd8d 0xe8aef22899a38f44f2b48fc12f51d0f0bd3146f15aae6a4e3de529e9daccf0b 0xb87bacccf7202cd576213b03d15dd98585c697de6571d5c37e915b8a35460c1 0x2f4095e46083b42757f0f7aabedc690037044e8ad4464d02a27ebd89d2ddf464 ]
new_commitments: [ 0x1711 0x1712 0x0 0x0 ]
new_nullifiers: [ 0x1811 0x1812 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1911 0x0 ]
unencrypted_logs_hash: [ 0x1912 0x0 ]
unencrypted_log_preimages_length: 0x1913
historic_block_data: private_data_tree_root: 0x1a11
nullifier_tree_root: 0x1a12
contract_tree_root: 0x1a13
l1_to_l2_messages_tree_root: 0x1a14
blocks_tree_root: 0x1a15
private_kernel_vk_tree_root: 0x1a16
public_data_tree_root: 0x1a17
global_variables_hash: 0x1a18

prover_address: 0x1b12

is_execution_request: 0

public_call_stack_preimages: [ contract_address: 0x1301
function_data: function_selector: 1302
is_internal: 0
is_private: 0
is_constructor: 0

public_inputs: call_context:
msg_sender: 0x1001
storage_contract_address: 0x1301
portal_contract_address: 0x1313131313131313131313131313131313131313
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1411
return_values: [ 0x1511 0x1512 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1711
old_value: 0x1712
new_value: 0x1713
 storage_slot: 0x1712
old_value: 0x1713
new_value: 0x1714
 storage_slot: 0x1713
old_value: 0x1714
new_value: 0x1715
 storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1811
current_value: 0x1812
 storage_slot: 0x1812
current_value: 0x1813
 storage_slot: 0x1813
current_value: 0x1814
 storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1911 0x1912 0x0 0x0 ]
new_commitments: [ 0x1a11 0x1a12 0x0 0x0 ]
new_nullifiers: [ 0x1b11 0x1b12 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c11 0x0 ]
unencrypted_logs_hash: [ 0x1c12 0x0 ]
unencrypted_log_preimages_length: 0x1c13
historic_block_data: private_data_tree_root: 0x1d11
nullifier_tree_root: 0x1d12
contract_tree_root: 0x1d13
l1_to_l2_messages_tree_root: 0x1d14
blocks_tree_root: 0x1d15
private_kernel_vk_tree_root: 0x1d16
public_data_tree_root: 0x1d17
global_variables_hash: 0x1d18

prover_address: 0x1e12

is_execution_request: 0
 contract_address: 0x1302
function_data: function_selector: 1303
is_internal: 0
is_private: 0
is_constructor: 0

public_inputs: call_context:
msg_sender: 0x1001
storage_contract_address: 0x1302
portal_contract_address: 0x1414141414141414141414141414141414141414
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1412
return_values: [ 0x1512 0x1513 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1712
old_value: 0x1713
new_value: 0x1714
 storage_slot: 0x1713
old_value: 0x1714
new_value: 0x1715
 storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x1715
old_value: 0x1716
new_value: 0x1717
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1812
current_value: 0x1813
 storage_slot: 0x1813
current_value: 0x1814
 storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x1815
current_value: 0x1816
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1912 0x1913 0x0 0x0 ]
new_commitments: [ 0x1a12 0x1a13 0x0 0x0 ]
new_nullifiers: [ 0x1b12 0x1b13 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c12 0x0 ]
unencrypted_logs_hash: [ 0x1c13 0x0 ]
unencrypted_log_preimages_length: 0x1c14
historic_block_data: private_data_tree_root: 0x1d12
nullifier_tree_root: 0x1d13
contract_tree_root: 0x1d14
l1_to_l2_messages_tree_root: 0x1d15
blocks_tree_root: 0x1d16
private_kernel_vk_tree_root: 0x1d17
public_data_tree_root: 0x1d18
global_variables_hash: 0x1d19

prover_address: 0x1e13

is_execution_request: 0
 contract_address: 0x1303
function_data: function_selector: 1304
is_internal: 0
is_private: 0
is_constructor: 0

public_inputs: call_context:
msg_sender: 0x1001
storage_contract_address: 0x1303
portal_contract_address: 0x1515151515151515151515151515151515151515
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1413
return_values: [ 0x1513 0x1514 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1713
old_value: 0x1714
new_value: 0x1715
 storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x1715
old_value: 0x1716
new_value: 0x1717
 storage_slot: 0x1716
old_value: 0x1717
new_value: 0x1718
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1813
current_value: 0x1814
 storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x1815
current_value: 0x1816
 storage_slot: 0x1816
current_value: 0x1817
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1913 0x1914 0x0 0x0 ]
new_commitments: [ 0x1a13 0x1a14 0x0 0x0 ]
new_nullifiers: [ 0x1b13 0x1b14 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c13 0x0 ]
unencrypted_logs_hash: [ 0x1c14 0x0 ]
unencrypted_log_preimages_length: 0x1c15
historic_block_data: private_data_tree_root: 0x1d13
nullifier_tree_root: 0x1d14
contract_tree_root: 0x1d15
l1_to_l2_messages_tree_root: 0x1d16
blocks_tree_root: 0x1d17
private_kernel_vk_tree_root: 0x1d18
public_data_tree_root: 0x1d19
global_variables_hash: 0x1d1a

prover_address: 0x1e14

is_execution_request: 0
 contract_address: 0x1304
function_data: function_selector: 1305
is_internal: 0
is_private: 0
is_constructor: 0

public_inputs: call_context:
msg_sender: 0x1001
storage_contract_address: 0x1304
portal_contract_address: 0x1616161616161616161616161616161616161616
is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1414
return_values: [ 0x1514 0x1515 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x1715
old_value: 0x1716
new_value: 0x1717
 storage_slot: 0x1716
old_value: 0x1717
new_value: 0x1718
 storage_slot: 0x1717
old_value: 0x1718
new_value: 0x1719
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x1815
current_value: 0x1816
 storage_slot: 0x1816
current_value: 0x1817
 storage_slot: 0x1817
current_value: 0x1818
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1914 0x1915 0x0 0x0 ]
new_commitments: [ 0x1a14 0x1a15 0x0 0x0 ]
new_nullifiers: [ 0x1b14 0x1b15 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c14 0x0 ]
unencrypted_logs_hash: [ 0x1c15 0x0 ]
unencrypted_log_preimages_length: 0x1c16
historic_block_data: private_data_tree_root: 0x1d14
nullifier_tree_root: 0x1d15
contract_tree_root: 0x1d16
l1_to_l2_messages_tree_root: 0x1d17
blocks_tree_root: 0x1d18
private_kernel_vk_tree_root: 0x1d19
public_data_tree_root: 0x1d1a
global_variables_hash: 0x1d1b

prover_address: 0x1e15

is_execution_request: 0
 ]
proof: [ 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 ]
portal_contract_address: 0x1002
bytecode_hash: 0x1003

"
`;
